--- a/pytorch/ch3/《军工记忆》.md
+++ b/pytorch/ch3/《军工记忆》.md
@@ -5,6 +5,8 @@
 
 做了什么事，什么条件下，遇到了什么困难，怎么解决的  
 
+看了很多遍了，但是现在看，还是每次都会哭  
+
 
 ### 第1集《“东方红一号”人造卫星》  
 
@@ -20,9 +22,7 @@
 
 之前进展不大，中国空间技术研究院正式成立时，已经是 1968 年 2 月，距离发射时间只剩下短短两年  
 
-负责总体设计的孙家栋决定，第一步，先精简计划。  
-
-把科研探测项目都先拿下来，放在第二颗星上，保证第一颗上天，能达到掌握航天技术的基本任务，能把队伍培养起来。  
+负责总体设计的孙家栋决定，第一步，先精简计划。把科研探测项目都先拿下来，放在第二颗星上，保证第一颗上天，能达到掌握航天技术的基本任务，能把队伍培养起来。  
 
 计算设备是手摇计算机，任务急的时候要上算盘  
 
@@ -36,7 +36,7 @@
 
 恶劣的太空条件，对上星设备都有很苛刻的技术要求，但是当时中国的整体工业水平比较落后，几乎每一个部件都过不了质量关。  
 
-当时最大的希望是一个插头能有 21 个节点，就这么个简单的事情，当年我们国家生产插头的水平就很难做到  
+当时最大的希望是一个插头能有 21 个接点，就这么个简单的事情，当年我们国家生产插头的水平就很难做到  
 
 插头生产出来了，但是却不能通过振动试验  
 
@@ -44,11 +44,11 @@
 
 液氮要自己蹬三轮去拉  
 
-没有低温实验室，用了解放军海军后勤部的一个冷库，脏得很，肉啊，鱼啊。  
+没有低温实验室，用了解放军海军后勤部的一个冷库，脏得很，肉啊，鱼啊。夏天穿着军大衣，鞋子都冻坏了    
 
 跟踪系统有一套应答机，要求体积很小，重量很轻，要在这个小小的空间里头，要装满那么多电子元器件，那很难。而且要求却提高了，要求能满足上千公里远距离的信号传输，而之前最远就是几公里  
 
-屋里空调都没有  
+车间里空调都没有  
 
 政治干扰很厉害，孙家栋因为出身问题靠边站，也是秘密地干  
 
@@ -64,16 +64,99 @@
 
 “我们中国人，有志气，有能力，确实是不容易的”  
 
-“非常激动，作为我自己来说，好像自己从小的愿望实现了，非常激动”  
+“非常激动，作为我自己来说，非常激动”  
 
 “这一生没有白过，还是做了点事，而且是做成功了”  
 
-“那个激动的那个心情，确实没办法说，你可以想象，那个时候中国那个条件，能把第一颗卫星在那个年代，把它弄到天上去，确实是，一个螺丝钉都是中国自己搞的，真是感觉到扬眉吐气。”  
+孙家栋院士：“那个激动的那个心情，确实没办法说，你可以想象，那个时候中国那个条件，能把第一颗卫星在那个年代，把它弄到天上去，确实是，一个螺丝钉都是中国自己搞的，真是感觉到扬眉吐气。”  
 
-“他说你们航天搞了这么大的成绩，都靠什么力量来完成的，我们有个很光荣的目标，带领我们去奋斗”  
+闵桂荣院士：“他说你们航天搞了这么大的成绩，都靠什么力量来完成的，我们有个很光荣的目标，带领我们去奋斗”  
 
-“一个人什么都不爱，不可能牺牲自己”  
+戚发轫院士：“一个人什么都不爱，不可能牺牲自己”  
 
+
+### 《“巨浪一号”潜地导弹》  
+
+设计人员自己建的干打垒的土坯房，没有家具，没有床。  
+
+那是一段动荡岁月，很多老专家靠边站，只有几百个经验不足的年轻人，其中还有不少是刚毕业的大学生。  
+
+初来乍到很多人被眼前的荒凉景象所震惊。连资料室和实验室都没有，更别说生活条件还极其恶劣。  
+
+从上海来了两位学生，到了那个地方以后，看到这个条件以后流泪了  
+
+没有什么办公楼，就在床上画图。到春天风沙特别大，起来了，屁股那儿是一个沙印  
+
+所以满屋都是灰尘，白白的图纸上落着一层灰  
+
+就是那些衬衣呀，回来洗，洗完了以后，那就是跟泥浆一样  
+
+更让这些年轻人感到沮丧的是，固体导弹技术，在中国是一片空白。既没有资料，也没有经验，更不可能像其他国家学习。  
+
+首先遇到的一个难题是，发动机喷口的火焰温度超过 3000 度，而且会产生固体颗粒，对材料的要求非常严苛。持续攻关，研制出了新的材料  
+
+信息闭塞，资料匮乏，政治运动干扰，进展十分缓慢。“巨浪一号”从论证开始，已经过去 5 年了，却连总体方案，都还没有最后明确   
+
+黄纬禄院士：“第一天同志们见面，我讲我到这个地方来是做学生的，我对这个方面一窍不通，我有问题我就要问大家，希望大家从 ABC 向我讲。”  
+
+潜地导弹的实验程序十分复杂，特别是需要大量的水下试验，但是当时实验难度很大，当时中国既没有经验，也没有相应的技术手段。  
+
+从开始到定型，需要好多好多实验，不一定在水下，放岸上把它搞好，然后再靠水下环境一步一步来，所以就现在陆上搞  
+
+“台筒艇”，现在陆上发射，再在发射筒模拟水下发射，最后在水下发射（拆解）  
+
+由于装备在核潜艇上，“巨浪一号”的体积远远小于东风二号，麻雀虽小，五脏俱全，就是因为这个小，使得所有的技术都面临空前的挑战。  
+
+从材料，到零部件，再到计算机的元器件，都要大比例地缩小。  
+
+全国上千家企业参加，小型化大会战，整个队我们国家从元器件到材料小型化，推动很大  
+
+计算机的尺寸缩小了，难免会对计算机的性能造成影响，在加上发动机的改变和水下发射的特点，使得“巨浪一号”的制导系统比原来的液体导弹要复杂得多  
+
+进行了大胆的创新，使用了很多优化算法，用很简单的方程，解决了非常复杂的问题  
+
+因为“巨浪一号”要小得多，所以伺服系统整个系统都需要重新设计，这涉及到海量的计算。模拟计算机体积很大，做起来很费事，要接线要调试，调试一次性能要个把个月，或者两三个月  
+
+很多都是用量角器一个点一个点描出来的，现在电脑一秒钟完成的工作了，当时却需要五到七天。  
+
+更加残酷的是，有的设计方案，算了六七年都没算出来，就是水下弹道发射系统 
+
+如果潜艇是处于静止状态，潜艇就会随海流发生摆动，发射轨迹很难控制，所以只能在运动中发射，这成了一个大难题。在导弹发射的瞬间，潜艇的速度，海浪海流的干扰，都会对导弹的姿态发生复杂而重大的影响。  
+发动机一点火，会产生很强大的气流，气流跟海水的液体流动，就形成了一个复杂的环境。  
+
+就在这扎眼之间，发生了无比复杂的力学变化，由于热量很高，产生了大量气体，气和水混合在一起；接下来，导弹在水中运动，除了水和水蒸气之外，还有大量的气泡，受力更加复杂；第三个阶段，弹尖刚刚出水，弹身还在水中，这时候水面上的空气又加入了这个复杂的力学方程中。如果发生偏差，导弹就会坠毁。   
+
+没有资料，只能从最基础的试验开始，在水动力实验室做缩比试验，试了 1000 多次，有了初步了解，但是还远远不够。必须要进行全尺寸试验。  
+
+重量太重很可能会砸坏潜艇，但是试验必须要是和真实的弹完全一样，办法是一多半重量装水，出水以后自己排出，重量轻，如水浅，还可以漂浮  
+
+可能会把壳体摔坏，试验，发现垂直入水就摔不坏，办法是在最上面打开一个降落伞  
+
+零部件精度要求非常高，一到两个 μ，中国没有数控机床。  
+
+经常一个人通宵干，钻研，最后靠手工在普通机床上做出了可以和电脑媲美的精度  
+
+“巨浪一号”的第一次试射失败了。  
+
+黄纬禄院士：“感觉到很伤心，我们花了这么多时间，花这么多人力，花这么多钱，好容易做出了这样子一个导弹，而且心里偷一直希望它成功，等于检验我们这个研制成果，结果失败了，这当然心里很痛心。”  
+
+黄纬禄院士：“我每天晚上根本睡不着觉”  
+
+5 天后发射成功。  
+
+“那次真是高兴得，拿着大搪瓷杯子敬酒，黄总也拿那个杯子喝酒，我们国家第一个突破，那是真是非常高兴。”  
+
+“真是那个高兴，觉得这个真是说不来的”  
+
+“那兴奋确实是没法形容，大家互相握手拥抱，因为我们等了十七年了，就相当于十七年终于试验成功了。”  
+
+“有共同的一点，就是工作都特别负责任，特别认真，就对导弹，对事业的热爱，简直就是把自己的生命都放在里面了。”  
+
+黄纬禄院士：“中间不管失败多少次，那么你最后一定要完成这个任务，除非你生命在成功之前结束了，那你就没办法了。既然接受一个任务，一定要成功，你承受得了也得承受，承受不了也得承受。”  
+
+
+
+  
 
 
 
