--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -94,7 +94,7 @@
 ### 黄纬禄院士
 自动控制专家  
 《军工记忆》  
-
+“中间不管失败多少次，那么你最后一定要完成这个任务，除非你生命在成功之前结束了，那你就没办法了。既然接受一个任务，一定要成功，你承受得了也得承受，承受不了也得承受。”  
 
 《科技人生·雷震海天》  
 潜地导弹，主要是指从潜艇下面发射的这个导弹，潜艇它可以在水下行走，比较隐蔽，距离远，不易被发现。可以接近到敌方的海岸边上再打。  
@@ -173,13 +173,14 @@
 每年工作 6000 个小时，工作 60 年  
 马斯克：要做自己喜欢的事，这样即使不工作的时候，脑子里也在想着这些事情。  
 1. 王大珩院士：同事们劝王大珩休息，王大珩十分认真地说：“谁剥夺我工作的权利就是剥夺我的生命。”  
-2. 顾诵芬院士：问：但是像您这样年纪的大师，很多都可能是安享晚年之乐了。答：了解航空的进展，就是我的晚年之乐。  
-3. 臧克茂院士：所以有人问你的爱好是什么？说实话，我的爱好就是继续工作。
-4. 王选院士：最后的 1941 天里，有 798 天住院或治疗，医生说活不过两年，他坚持了五年多，一好转就投入到工作中。
-5. 林俊德院士：“我不能躺下，一躺就起不来了”
-6. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
-7. 金怡濂院士：他坚信“生命在于做事”。  
-8. 
+2. 黄纬禄院士：“中间不管失败多少次，那么你最后一定要完成这个任务，除非你生命在成功之前结束了，那你就没办法了。既然接受一个任务，一定要成功，你承受得了也得承受，承受不了也得承受。”
+3. 顾诵芬院士：问：但是像您这样年纪的大师，很多都可能是安享晚年之乐了。答：了解航空的进展，就是我的晚年之乐。  
+4. 臧克茂院士：所以有人问你的爱好是什么？说实话，我的爱好就是继续工作。
+5. 王选院士：最后的 1941 天里，有 798 天住院或治疗，医生说活不过两年，他坚持了五年多，一好转就投入到工作中。
+6. 林俊德院士：“我不能躺下，一躺就起不来了”
+7. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
+8. 金怡濂院士：他坚信“生命在于做事”。  
+9. 
 
 
 起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
