--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -5,10 +5,15 @@
 所有考虑机会成本的做法，都非常漂亮  
 
 
-### 别人的例子  
+## 别人的例子  
 1. 子夏曰：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”  
 2. 褚时健例子整理，听一遍
 3. 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
+4. 不花时间锻炼，就花时间生病——陆军院士
+
+反例
+1. 梵高、路遥、朱生豪
+2. 
 
 
 ### 自己应该做的
