--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -22,7 +22,14 @@
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
 5. 吃饭看算法
 6. 
-7. 
+
+
+### 看视频  
+在战术的部署方面，当着我军已经集中绝对优势兵力包围敌军诸路中的一路（一个旅或一个团）的时候，我军担任攻击的各兵团（或各部队），不应企图一下子同时全部地歼灭这个被我包围之敌，因而平分兵力，处处攻击，处处不得力，拖延时间，难于奏效。而应集中绝对优势兵力，即集中六倍、五倍、四倍于敌，至少也是三倍于敌的兵力，并集中全部或大部的炮兵，从敌军诸阵地中，选择**较弱的一点（不是两点）**，猛烈地攻击之，务期必克。得手后，迅速扩张战果，各个歼灭该敌。  
+1. 30 分钟以上：1 分钟一个任务 
+2. 20-30 分钟：2 分钟一个任务
+3. 10-20 分钟：3 分钟一个任务
+4. 10 分钟以内：5 分钟一个任务  
 
 
 ### 小 tricks
