--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -14,11 +14,10 @@
 ## 方法
 1. 永远考虑机会成本，是褚时健做事如此成功又如此漂亮的核心原因    
 2. 犯错才是学习的核心，会触发主动阅读，主动阅读是最好的学习方法
-3. 集中兵力，避强击弱 [《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 
+3. 集中兵力，避强击弱  
+[《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 
 做事应该一直有一个是主要的事项（读 Django 源码书），做的时候应该是先做成主要事项的一个点（读一章、一节、一页、一段、一行）；任务一天不能超过 3 项，一个主攻，两个佯攻，多了反而都不做了，集中力量，逐个击破    
-看视频课程，看一节、看 5 分钟、看 1 分钟、看 10 秒钟  
-仅仅经过四个月的喘息，南京就发动了第二次围剿，以现任军政部长何应钦为总司令。他的兵力超过二十万，分七路向苏区推进（敌人非常强大，困难非常大）。当时红军的处境被认为非常危急。苏维埃政权管辖的区域很小，资源有限，装备缺乏，敌人的物质力量在各方面都远远超过红军（自己资源极其有限）。但是，红军仍然坚持迄今赖以制胜的战术来对付这次进攻。我们放敌军诸路深入苏区，然后集中主力突然攻击敌第二路，打败了好几个团，摧毁了他们的进攻力量。我们马上迅速地相继进攻第三路、第六路、第七路，逐个击败他们。第四路不战而退，第五路被部分地消灭。在十四天中，红军打了六仗，走了八天路，结果得到决定性的胜利。蒋光鼐、蔡廷锴指挥的一路军，在其他六路被击溃或退却以后，没有认真打一仗就撤退了。  
-《七武士》  
+反“围剿”、《七武士》  
 先克服一个困难，再克服其他的。  
 先克服一个坏习惯，再克服另一个坏习惯  
 先养成一个好习惯，再养成另一个好习惯  
@@ -42,7 +41,7 @@
 1. 合并，跑步听书，一年多读 50 本经典
 2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；  
 3. 集中优势兵力，半个小时就读完了《红星照耀中国》，之前半个月没看几页
-4. 因为每天看，所以找到了主动阅读的方法，效率提高了 20 倍以上  
+4. 因为每天看，所以找到了主动阅读的方法，效率提高了 20 倍以上；看视频不再辛苦  
 5. 
 
 
