--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -14,7 +14,7 @@
 ## 方法
 1. 永远考虑机会成本，是褚时健做事如此成功又如此漂亮的核心原因    
 2. 犯错才是学习的核心，会触发主动阅读，主动阅读是最好的学习方法
-3. 集中兵力，避强击弱  
+3. [集中兵力，避强击弱](https://github.com/yananma/dongshouxue_sdxx/blob/master/pytorch/ch3/%E6%96%87%E4%BB%B6/%E5%81%9A%E4%BA%8B%E6%96%B9%E6%B3%95%E8%AF%A6%E7%BB%86.md#%E9%9B%86%E4%B8%AD%E5%85%B5%E5%8A%9B%E9%81%BF%E5%BC%BA%E5%87%BB%E5%BC%B1)  
 [《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 
 做事应该一直有一个是主要的事项（读 Django 源码书），做的时候应该是先做成主要事项的一个点（读一章、一节、一页、一段、一行）；任务一天不能超过 3 项，一个主攻，两个佯攻，多了反而都不做了，集中力量，逐个击破    
 反“围剿”、《七武士》  
