--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -10,6 +10,8 @@
 2. 褚时健例子整理，听一遍
 3. 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
 4. 不花时间锻炼，就花时间生病——陆军院士
+5. 
+
 
 反例
 1. 梵高、路遥、朱生豪
@@ -20,7 +22,9 @@
 1. 早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；
 2. 不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦；买水果。不买水果，就要买药  
 3. 读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
-4. 
+4. 养成欢迎坏消息的习惯，早听到一个坏消息，就能避免一次重大事故  
+5. 体检，不在体检上花钱，就要在治病上花几千几万倍的钱；不在体检上花时间，就要在治病上花时间；不在体检中承受一点，试试治病有多痛苦  
+6. 
 
 
 
