--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -16,7 +16,7 @@
 
 
 ## 编程学习方法
-1. 算法学习方法：先看一遍，再自己想着写一遍，错了改正，再自己写一遍  
+1. 算法学习方法：先看一遍，自己想着写一遍，自己再写一遍  
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
