--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -10,7 +10,8 @@
 2. 子夏曰：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”  
 3. 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
 4. 不花时间锻炼，就花时间生病——陆军院士
-5. 
+5. 工欲善其事，必先利其器。如果给我8个小时来砍倒一棵树的话，我将会花6个小时来磨斧头。——林肯；方法是可以反复使用的；光学会了写程序，节省了多少时间？
+6. 
 
 
 反例
@@ -24,7 +25,8 @@
 3. 读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
 4. 养成欢迎坏消息的习惯，早听到一个坏消息，就能避免一次重大事故  
 5. 体检，不在体检上花钱，就要在治病上花几千几万倍的钱；不在体检上花时间，就要在治病上花时间；不在体检中承受一点，试试治病有多痛苦  
-6. 
+6. 每天看做事方法，做事的时候可以节省多少时间？
+7. 
 
 
 
