--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -8,7 +8,8 @@
 5. 每天用
 6. **把所有的都用上**
 7. 每天看，每天用，才能不断改进
-8. 
+8. 不要怕长，工具越多越好，做事的时候可以节省多少时间？方法是可以反复使用的；光学会写程序，节省了多少时间？
+9. 
 
 
 ## 方法
@@ -18,9 +19,6 @@
 [《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 
 做事应该一直有一个是主要的事项（读 Django 源码书），做的时候应该是先做成主要事项的一个点（读一章、一节、一页、一段、一行）；任务一天不能超过 3 项，一个主攻，两个佯攻，多了反而都不做了，集中力量，逐个击破    
 反“围剿”、《七武士》  
-先克服一个困难，再克服其他的。  
-先克服一个坏习惯，再克服另一个坏习惯  
-先养成一个好习惯，再养成另一个好习惯  
 4. 拆解，分而治之  
 写一段、读一个字，看一分钟、敲一行代码、跑一步、  
 把大的任务拆分成一小段一小段，完成一小步  
@@ -31,15 +29,15 @@
 
 ### 小 tricks
 1. 短时间的习惯，用微信 0/7  
-2. 微信提醒功能，每天至少提醒一条
+2. 微信提醒功能
 3. 写当天任务，完成打对勾；明确目标，量化任务，知道差距，有成就感  
-4. 20 分钟分成 4 个 5 分钟，写纸上，完成一个打一个对钩，分而治之，可视化过程，可以看到进度    
+4. 20 分钟分成 20 个 1 分钟，写纸上，完成一个打一个对钩，分而治之，可视化过程，可以看到进度    
 5. 
 
 
 ### 案例
 1. 合并，跑步听书，一年多读 50 本经典
-2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；  
+2. 40 分钟的视频，每 1 分钟是一个目标；把 40 分钟当做一个整体，非常辛苦，分成 1 分钟一段，就非常轻松，跟玩儿似的；  
 3. 集中优势兵力，半个小时就读完了《红星照耀中国》，之前半个月没看几页
 4. 因为每天看，所以找到了主动阅读的方法，效率提高了 20 倍以上；看视频不再辛苦  
 5. 
