--- a/pytorch/ch3/原来用过的.md
+++ b/pytorch/ch3/原来用过的.md
@@ -10,4 +10,6 @@ restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一
 ### 做事方法  
 1. 一周不看微博、Twitter。2/7  
 2. 几天不看、一天不看、一次不看、一分钟不看  
-3. 
+3. 先克服一个困难，再克服其他的。  
+先克服一个坏习惯，再克服另一个坏习惯  
+先养成一个好习惯，再养成另一个好习惯  
