--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -50,4 +50,11 @@
 4. 
 
 
+### 长期原则
+1. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说  
+霍尔曼说，“我觉得他是想让 SpaceX 看起来更真实一些，如果你把一枚火箭放在别人的院子里，人们就没法说它子虚乌有了。”  
+Tesla 最开始的样车，外壳还是用胶水粘上的，车也不能开，但是有了东西  
+马斯克说，即使是有一个木头模型，也要比纯粹的 PPT 好得多  
+2. 
+
 
