--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -20,7 +20,7 @@
 做事应该一直有一个是主要的事项（读 Django 源码书），做的时候应该是先做成主要事项的一个点（读一章、一节、一页、一段、一行）；任务一天不能超过 3 项，一个主攻，两个佯攻，多了反而都不做了，集中力量，逐个击破    
 反“围剿”、《七武士》  
 4. 拆解，分而治之  
-写一段、读一个字，看一分钟、敲一行代码、跑一步、  
+写一个字、读一个字，看一分钟、敲一行代码、跑一步、  
 把大的任务拆分成一小段一小段，完成一小步  
 5. 取消、合并、重排、简化  
 6. 
