--- a/pytorch/ch3/《军工记忆》.md
+++ b/pytorch/ch3/《军工记忆》.md
@@ -8,7 +8,7 @@
 看了很多遍了，但是现在看，还是每次都会哭  
 
 
-### 第1集《“东方红一号”人造卫星》  
+### 《“东方红一号”人造卫星》  
 
 当时的中国国力和科研基础都还不足以支撑卫星研制，只能先集中精力搞原子弹和导弹。  
 
@@ -155,8 +155,47 @@
 黄纬禄院士：“中间不管失败多少次，那么你最后一定要完成这个任务，除非你生命在成功之前结束了，那你就没办法了。既然接受一个任务，一定要成功，你承受得了也得承受，承受不了也得承受。”  
 
 
+### 《“红箭-8”反坦克导弹》
 
+一次次试验，一次次失败，一道道难关，一点点越过，这是一条用失败铺就的成功之路，这是一群用执着书写不凡的人们。  
+
+但是就在这个时期，欧美各国的第二代反坦克导弹，已经大量列装部队，中国和世界之间的距离，正在被越拉越大。  
+
+王兴治院士：“没有任何参考资料，没有技术，要手段没手段，我们就是有一帮子人。”  
+
+从总体设计到各个分系统，没有人感到轻松，在试验过程中，几乎没有一个部件没出过问题。  
+
+王兴治院士：“每一个部件我都能举出很多的例子，就是说当时我们几乎走投无路。”  
+
+修改设计方案是常有的事，画图、加工、试打，不断循环往复，是当时的技术条件下唯一可走的道路。  
+
+“那边加工呢，这边图纸完了，就拿到工厂加工，拿了回来，马上做试验，做试验，这个方案看看哪儿还有问题，赶快回来再改进。”  
+
+“这个方案还没加工完，那个方案又开始加工了。”  
+
+试验、失败、改进、再试验，没有人确切统计过，十几年里究竟进行了多少次试验。  
+
+“经常在秋天，入冬的时候，这个阴雨连绵，这个衣服都湿了，都贴到身上了，风一吹冷得不得了。拿了一个泡沫塑料，前边放一个，后边放一个，衣服用草绳子那么一扎，这样稍微暖和一点儿。”  
+
+在开头几年，导弹试验的失败率居高不下，掉弹的原因多种多样层出不穷。  
+
+王兴治院士：“看的时候，我很羡慕，就像这个黑板，比黑板那么大的这个靶，那导弹就从一个孔里打过去，那精度很高的，非常羡慕。我们的条件比人家差得远了。我们的科研手段不行，人家科研手段好，那好得我们都不可想象，就人家的条件，对我们来说是天堂般的条件。但是回来以后，琢磨琢磨，哪一样东西都不卖给中国，所以咱也不要想做那个梦，来依靠人家搞我们自己的东西，活路就是自己干。”  
+
+这时，“红箭-8”的研制已经走过第 5 个年头了，还远远没有看到终点。  
+
+王兴治院士：“就把我们扔到大海里头了，连点光明都看不见，当时就是这样。”  
   
+王兴治院士：“我从事反坦克导弹的这个事业，整整 50 年，我多少为国家做了点工作。这是我最骄傲，自豪的一点了。”  
+
+“我们这一代人就是比较傻呼呼的，就是干活，随你怎么叫，随你叫我干什么，我就干。”  
+
+“也不辛苦，过得充实。”  
+
+“能够为国防贡献力量，感觉应该好好干。”  
+
+“不管怎么样，这是实实在在地是想为党做点事情，做点贡献，把我所学的知识使出来，我只要这一生工作上对得起了，我就满足了。”  
+
+“你们来给我们照相，记录下来，我们心情特别地高兴，没有忘了我们这帮人，几十年辛苦”  
 
 
 
