--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -21,7 +21,7 @@
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
 5. 吃饭看算法
-6. 看视频，1 分钟一个任务  
+6. 看视频，1 分钟一个任务，作为启动项  
 7. 
 
 
