--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -11,7 +11,13 @@
 3. 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
 4. 不花时间锻炼，就花时间生病——陆军院士
 5. 工欲善其事，必先利其器。如果给我8个小时来砍倒一棵树的话，我将会花6个小时来磨斧头。——林肯；方法是可以反复使用的；光学会了写程序，节省了多少时间？
-6. 
+6. 邓小平 “863”计划给了 100 个亿，回报超万倍，改变了国家命运，改变了十几亿人的命运，改变了世界史  
+7. 原谅恶就是伤害善。——富兰克林
+夫养稂莠者害嘉谷，赦有罪者贼良民。——唐太宗
+榛棘不除，则兰蕙减色；害马不去，则骐骥短气，此甄别不可缓也。——曾国藩
+医者之治瘠痈，甚者必剜其腐肉而生其新肉。今日之劣弁羸兵，盖亦当之为简汰，以剜其腐者，痛加训练，以生其新者。——曾国藩
+8. 
+
 
 
 反例
