--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -32,7 +32,8 @@
 4. 养成欢迎坏消息的习惯，早听到一个坏消息，就能避免一次重大事故；欢迎批评  
 5. 体检，不在体检上花钱，就要在治病上花几千几万倍的钱；不在体检上花时间，就要在治病上花时间；不在体检中承受一点，试试治病有多痛苦  
 6. 每天看做事方法，做事的时候可以节省多少时间？
-7. 
+7. 花时间在不重要的题目上，重要的题目就记不住，或者是没时间学  
+8. 
 
 
 
