--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -1,6 +1,6 @@
 
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
-每天都要看，每天干活之前，拿上工具，干活的时候才能伸手拿到工具  
+每天都要看，每天干活之前，拿上工具，干活的时候才能用上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 方法改变的是复杂度，多个数量级，效果相差已经不是几亿亿倍可以形容的了，只有方法有这么大的力量，马斯克就是有好的算法
 3. 多学一条，解决一类问题；改进一件，改进几万件事
@@ -23,7 +23,7 @@
 写一个字、读一个字，看一分钟、敲一行代码、跑一步、  
 把大的任务拆分成一小段一小段，完成一小步  
 5. 取消、合并、重排、简化  
-6. 
+6. 注意力机制。等同视之就是都不重要。
 7. 
 
 
@@ -40,7 +40,8 @@
 2. 40 分钟的视频，每 1 分钟是一个目标；把 40 分钟当做一个整体，非常辛苦，分成 1 分钟一段，就非常轻松，跟玩儿似的；  
 3. 集中优势兵力，半个小时就读完了《红星照耀中国》，之前半个月没看几页
 4. 因为每天看，所以找到了主动阅读的方法，效率提高了 20 倍以上；看视频不再辛苦  
-5. 
+5. 注意力机制，算法先学高频题；源码先学 MTV；知识点先看链表、二叉树、查找、排序  
+6. 
 
 
 ### 生活相关  
