--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -20,7 +20,7 @@
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
-5. 吃饭看算法
+5. 
 6. 看视频，1 分钟一个任务，作为启动项  
 7. 
 
@@ -32,7 +32,7 @@
 
 
 ## 案例  
-1. 主动阅读，看一遍自己想着写一写。学会了爬虫；学会了前后端；学会了算法，Fibonacci、翻转链表，翻转链表写了 12 遍也没记住，新的方法一遍就记住了，效率提高了 20 倍以上      
+1. 主动阅读，看一遍自己想着写一写，找到了学习编程的正确方法。学会了爬虫；学会了前后端；学会了算法，效率提高了 20 倍以上      
 2.  
 
 
