--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -2,7 +2,7 @@
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
 每天都要看，每天干活之前，拿上工具，干活的时候才能用上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
-2. 方法改变的是复杂度，多个数量级，效果相差已经不是几亿亿倍可以形容的了，只有方法有这么大的力量，马斯克就是有好的算法
+2. 方法改变的是复杂度，多个数量级，效果相差几亿倍，只有方法有这么大的力量，马斯克就是有好的算法
 3. 多学一条，解决一类问题；改进一件，改进几万件事
 4. 需要一个基准 base，以后再在这个上面补充改进；王大珩院士：有和没有大不一样
 5. 每天用
@@ -22,8 +22,8 @@
 4. 拆解，分而治之  
 写一个字、读一个字，看一分钟、敲一行代码、跑一步、  
 把大的任务拆分成一小段一小段，完成一小步  
-5. 取消、合并、重排、简化  
-6. 注意力机制。等同视之就是都不重要。
+5. 注意力机制。等同视之就是都不重要。
+6. 取消、合并、重排、简化  
 7. 
 
 
