--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -16,7 +16,7 @@
 
 
 ## 编程学习方法
-1. 算法学习方法：先看一遍，自己想着写一遍，自己再写一遍  
+1. 算法学习方法：自己想着写一遍，看看对不对
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
@@ -33,7 +33,8 @@
 
 ## 案例  
 1. 主动阅读，看一遍自己想着写一写，找到了学习编程的正确方法。学会了爬虫；学会了前后端；学会了算法，效率提高了 20 倍以上      
-2.  
+2. 主动阅读，所以是先想一想，再看答案更好  
+3.  
 
 
 ## 长期原则  
