--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -32,7 +32,7 @@
 3. 读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
 4. 养成欢迎坏消息的习惯，早听到一个坏消息，就能避免一次重大事故；欢迎批评  
 5. 体检，不在体检上花钱，就要在治病上花几千几万倍的钱；不在体检上花时间，就要在治病上花时间；不在体检中承受一点，试试治病有多痛苦  
-6. 每天看做事方法，做事的时候可以节省多少时间？
+6. 每天看做事方法，不要光看到方法要每天看，而是要看到每天因为看方法，做事的时候可以节省多少时间
 7. 花时间在不重要的题目上，重要的题目就记不住，或者是没时间学  
 8. 
 
@@ -42,4 +42,6 @@
 
 #### 小事儿
 1. 买个散热器 39，总比买个电脑 5000+ 便宜  
-2. 
+2. 买耳机，要看到听书创造的价值
+3. 
+
