--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -13,13 +13,24 @@
 不看新闻  
 
 ### 毛明院士  
-兵器首席科学家  
+兵器首席科学家、99A 坦克总设计师    
+《大家》  
 坦克有一种英雄气概  
 
 我们国家的坦克水平，我们是处于先进水平  
 
 老师的一封信，放弃了在中关村工作    
 
+
+### 闵恩泽院士  
+《知领》公众号  
+**我跟他一起呆了几十年，几乎是所有的内容都是工作。见面就是工作，不管是在办公室也好，是在工厂去也好，或者是在火车上也好，甚至到他家里也好，谈的都是工作。所以我们和他接触的过程当中啊，很多人都体会到，一跟闵老总在一起，就是谈工作。**（以闵院士为榜样）  
+
+闵恩泽常说自己是半路出家   
+
+七十多岁的人，他晚上回家几乎也都是，把东西拿回家看，**上班下班都是工作**。年纪大了以后，半夜老醒，醒了就起来看两个小时材料再睡   
+
+“把自己的一生跟国家建设和人民需要结合起来，这是我最大的幸福。”——闵恩泽（2008年1月9日《光明日报》）  
 
 ### 金怡濂院士  
 《知领》公众号  
@@ -189,7 +200,8 @@
 6. 林俊德院士：“我不能躺下，一躺就起不来了”
 7. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
 8. 金怡濂院士：他坚信“生命在于做事”。  
-9. 
+9. 闵恩泽院士：上班下班都是工作。  
+10. 
 
 
 起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
