--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -109,6 +109,11 @@
 
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
 
+### 邓稼先  
+
+“那是 1958 年的 8 月份，那天晚上他回来比较晚，他说他要调动工作了，我问他调哪儿去，他说不能说，做什么工作，也不能说，我说你给我一个信箱地址，我们通信，他说可能也不太行。他就突然非常严肃地说：做好了这件事情，我这一生就过得很有价值，就是为它死也值得。”  
+
+“不要让别人把我们落得太远。”  
 
 
 ### 黄纬禄院士
