--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -115,6 +115,15 @@
 
 “不要让别人把我们落得太远。”  
 
+《大师》  
+
+美国的解密文件表明，美国曾多次企图对中国发动核突袭。  
+
+住院的 363 天里，他动了 3 次手术，363 天里，他一直疼痛不止，止痛的杜冷丁从每天一针变成每小时一针。全身大面积溶血性出血。  
+
+“他说这个比你的命还重要。”  
+
+
 
 ### 黄纬禄院士
 自动控制专家  
@@ -206,8 +215,7 @@
 7. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
 8. 金怡濂院士：他坚信“生命在于做事”。  
 9. 闵恩泽院士：上班下班都是工作。  
-10. 戚发轫院士：“我们白天做晚上做，星期天星期六也做，过年过节也做。”
-11. 
+10. 
 
 
 起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
