--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -77,6 +77,11 @@
 所以结论就是到二十一世纪中叶，中国将成为科技大国  
 
 
+### 宋文骢院士  
+飞机总体设计专家  
+“一定要有很好的飞机，这是我们整个这一代人和整个航空人的希望，心愿。”  
+
+“一个国家要是落后，那确实是，挨打起来没完的。”   
 
 ### 钱七虎院士  
 
@@ -108,6 +113,24 @@
 工作劳累过度，摔倒了，完全是一个昏迷的状态，住院住了一个多礼拜，但是中间清醒了一会儿，还记得让助手去开一个会，就是飞机的事儿  
 
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
+
+
+### 程开甲院士  
+物理学家  
+
+中国积贫积弱，在英国留学期间，到海边去游泳的时候，几个留学生一起去游泳，一些外国人下水了就说，这群中国人把我们的海水都搞脏了。处处被人瞧不起  
+
+留学第三年，在电影院看到了一段影片，英国紫石英号被中国人民解放军击伤。  
+“好像它厉害得很，我们不买它的账。就看到英国的紫石英军舰被打伤了，所以我们当时看的时候真是高兴啊，我们有这一天能够这个样子的。”  
+
+他说，回到了祖国，为国家做贡献，他是感到最幸福的事。  
+
+为了配合国家的需要，他十年四次转换了研究方向。他说一切都是为了国家的利益，民族的利益，要我做什么都行。  
+
+“我觉得人生的价值在于贡献，你为人民贡献，为国家贡献，这个才是价值。”  
+
+
+
 
 ### 邓稼先  
 
