--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -16,7 +16,9 @@
 夫养稂莠者害嘉谷，赦有罪者贼良民。——唐太宗
 榛棘不除，则兰蕙减色；害马不去，则骐骥短气，此甄别不可缓也。——曾国藩
 医者之治瘠痈，甚者必剜其腐肉而生其新肉。今日之劣弁羸兵，盖亦当之为简汰，以剜其腐者，痛加训练，以生其新者。——曾国藩
-8. 
+8. 对您个人来说，现在最紧缺的是什么？   
+“时间，我是倒计时的，我说我别的都可以慷慨，钱我也可以慷慨，时间我不能慷慨，因为我没有了，你给我浪费掉了，就等于我少做了，我在时间上是很小气的。所以我的手机是单向的，我手机只开起来找人，别人找我是找不着的，我不打开。”  ——汪品先院士（自己从 30 岁开始倒计时，时间是最宝贵的，做了这件事，就不能做另一件了）  
+9. 
 
 
 
