--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -12,6 +12,34 @@
 《开讲啦》  
 不看新闻  
 
+### 汪品先院士  
+海洋地质学家  
+
+对您个人来说，现在最紧缺的是什么？  
+“时间，我是倒计时的，我说我别的都可以慷慨，钱我也可以慷慨，时间我不能慷慨，因为我没有了，你给我浪费掉了，就等于我少做了，我在时间上是很小气的。所以我的手机是单向的，我手机只开起来找人，别人找我是找不着的，我不打开。”  
+
+
+
+
+### 崔崑院士  
+金属材料专家  
+《面对面》  
+
+
+
+### 欧阳自远院士  
+天体化学与地球化学家  
+《面对面》  
+后来很快我就醒悟到，中国也必然会进入空间时代，57 年，58 年，我们建国还不到十年，百废待兴，一穷二白，我们哪有能力去搞月球，搞火星啊，但是我坚信一条，我们中国将来一定会的。  
+
+我一共准备了 35 年，这些都准备好了。  
+
+到嫦娥一号成功，一共准备了 45 年。  
+
+尽管已经年逾八旬，欧阳自远仍然保持着每天早上五点半起床，晚上十一点睡觉，工作一整天的生活节奏。  
+
+“累不累呀您？”“不累，因为做自己高兴得事情。”  
+
 ### 毛明院士  
 兵器首席科学家、99A 坦克总设计师    
 《大家》  
