--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -1,7 +1,7 @@
 
-是我所知道的最优秀的一群人，我们的院士，都学会      
+是我所知道的最优秀的一群人，我们的院士，是极其适合我的，有大量的极其有效的做事方法，有极其丰富的具体的例子，都学会      
 
-文章视频方法品质，一两句话就行，有和没有天壤之别；王大珩院士：有和没有大不一样    
+文章、视频、方法、品质，一两句话就行，有和没有天壤之别；王大珩院士：有和没有大不一样    
 
 不用就忘  
 
@@ -24,6 +24,15 @@
 ### 崔崑院士  
 金属材料专家  
 《面对面》  
+
+那个时代的人不考虑这个问题，对我没有吸引力，我对这个东西不感兴趣。我的东西能够得到应用了，特别是还列到国家的标准，我比什么都高兴，那是钱买不来的。  
+
+我用不完，我剩下的钱，都算是多的。  
+
+怎么不用来改善自己的生活？
+我已经改善了，不能再改善了，改善到顶了。我现在的生活已经是我想象不到的生活了，和过去没法比。衣服也不坏，穿着舒服。我们也不讲究排场，也不是企业家，能够穿就行了。  
+
+国家不培养我，我什么都没有。  
 
 
 
@@ -49,6 +58,44 @@
 
 老师的一封信，放弃了在中关村工作    
 
+
+### 吴孟超院士  
+肝胆外科学家  
+《朗读者》  
+从医七十五年，救治过一万六千多人。  
+
+96 岁还在做手术，他说我的时间不多了，我必须争分夺秒。  
+
+患者感谢信：别的医院都不接，吴老治好了她，给了她完整的人生。  
+
+有一些年轻人啊，同事说，人家都不敢做，你做啊，万一出了事儿，你的名誉就没有了。我说啊，我名誉算什么，我不过是一个吴孟超嘛，那算啥，救治病人是我的天职。  
+
+人呐，总有生命终点的，不可能你活一千岁，是吧，到时候不行了就走了，这你不要去计划，也不要去考虑，这是自然现象。但是我总觉得，每天在工作当中度过，不浪费时间。  
+
+每天 7 点吃早饭，吃完去查房，每周起码 3 台手术。  
+
+《军事纪实》  
+做手术以稳准快著称，他的手被称为“肝胆圣手”。  
+
+“他这个手，就像一双眼睛一样。他的手进去一摸，没什么废动作，他就往下一扒，就开始分离，就开始切。”  
+
+“到了出神入化的境界了。”  
+
+老师给他指明了方向，“他这一提，给我指明了方向，方向指明了，我就下决心，下决心以后我就是干。”  
+
+记住了肝脏的所有的血管的走向。“像上海一样，你地图，马路都不熟悉，你跑，跑到哪儿去啊，要是再找个地方都找不到。解剖也要熟悉，血管来龙去脉要清楚。”  
+
+他觉得开刀做手术，才是他人生最大的乐趣。  
+
+就是越做越精湛，快得不得了，他动作很快，我觉得就像作画一样，一气呵成。  
+
+“从来没休假。”    
+
+《面对面》  
+“吴老，您想过没有，什么时候您不做手术了”  
+“我没想过”  
+
+“要让病人知道，他的病是什么病，怎么治”  
 
 ### 闵恩泽院士  
 《知领》公众号  
@@ -174,6 +221,7 @@
 
 “他说这个比你的命还重要。”  
 
+每次签字根本不是像电视上那样镇定，而是压力非常大，手一直抖。每一次都是压力非常大。  
 
 
 ### 黄纬禄院士
@@ -270,12 +318,12 @@
 11. 
 
 
-起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
+起因说来话长，从小看到的书和文章，除了课本上的以外，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
 
 这些年看到我们的发展，意识到我们可能不久以后就会成为人类有史以来最强大的国家。这个带来了巨大的震撼。  
 
 伟大的事业背后一定是有一群伟大的人物和伟大的精神，但是我却一无所知。所以就重新开始了对我们自己国家近现代史的学习。  
 
-这个过程中，看到了“两弹一星”，看到了军工发展，看到了对他们的采访，纪录片中有很多院士，慢慢就认识了很多，这些人学术造诣，赤子之心，让我深受感动。慢慢就越看越多了。  
+这个过程中，看到了“两弹一星”，看到了军工发展，看到了对他们的采访，纪录片中有很多院士，慢慢就认识了很多，这些人高超的学术造诣，高尚的品德，赤子之心，让我深受感动。所以我穷尽自己所有的努力，找到了能找到的所有的视频，越看就越多了。  
 
 他们是我们国家这些年发展的中流砥柱，为人类的发展做出了非常大的贡献，是人类有史以来最了不起的人群之一。  
