--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -7,6 +7,29 @@
 
 一次整理，终生受用  
 
+### 任继周院士  
+草地农业科学家  
+《知领》公众号  
+
+我个人呢，天资并不好，也就是中等水平。我哥哥任继愈，他告诉我，他说人的成就，到了一定程度以后呢，不是看天资，(而是)看勤奋。人的智慧，智商啊有高有矮，这个当然是有天赋的，有差别，但是差别再大，也大不到哪儿去。后天的锻炼更要紧，后天的锻炼，现在我考虑啊，是品质的锻炼，意志的锻炼。  
+
+像这一类的问题，我觉得就是要坚持。认准的事儿，你就坚持。不要跟人家比，一个什么机会呀，当了什么东西了，多少钱了，不要搞这些个。你就好好做你的工作。  
+
+不要多高啊，多显耀啊，才满足，就是踏踏实实做工作。  
+
+我一进初中我就写日记，没断过，一天也不断。我觉得记日记对我很有帮助。  
+
+你在写日记的时候，你自然会想一想你做了什么事，还可以做什么。每天有这么一点平静的，自己的天地。从社会啊，纷扰的社会里头，脱离出来，这一点非常重要。  
+
+从来我没休息过。  
+
+
+### 王阳元院士  
+微电子学家  
+央视新闻  
+
+“这种国家最需要的时刻，正是我们科学家献身报国的最好时机。”  
+
 
 ### 王辰院士  
 《开讲啦》  
@@ -47,7 +70,7 @@
 
 尽管已经年逾八旬，欧阳自远仍然保持着每天早上五点半起床，晚上十一点睡觉，工作一整天的生活节奏。  
 
-“累不累呀您？”“不累，因为做自己高兴得事情。”  
+“累不累呀您？”“不累，因为做自己高兴的事情。”  
 
 ### 毛明院士  
 兵器首席科学家、99A 坦克总设计师    
@@ -315,7 +338,8 @@
 8. 金怡濂院士：他坚信“生命在于做事”。  
 9. 闵恩泽院士：上班下班都是工作。  
 10. 戚发轫院士：“我们白天做晚上做，星期天星期六也做，过年过节也做。”  
-11. 
+11. 任继周院士：“从来我没休息过。”  
+12. 
 
 
 起因说来话长，从小看到的书和文章，除了课本上的以外，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
@@ -327,3 +351,9 @@
 这个过程中，看到了“两弹一星”，看到了军工发展，看到了对他们的采访，纪录片中有很多院士，慢慢就认识了很多，这些人高超的学术造诣，高尚的品德，赤子之心，让我深受感动。所以我穷尽自己所有的努力，找到了能找到的所有的视频，越看就越多了。  
 
 他们是我们国家这些年发展的中流砥柱，为人类的发展做出了非常大的贡献，是人类有史以来最了不起的人群之一。  
+
+每天听一个院士的讲座，集几百个院士之所长于一身，世界上有谁能有这么多好的老师呢？全世界就我一个人。院士的采访会一直有的，学一辈子。  
+
+人工智能是赋能万物的，要了解各个行业，看院士的采访是最好的方法。  
+
+
