--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -16,7 +16,7 @@
 勤奋是立身之本，不管遇到多大的风浪都冲不垮。每周工作时间是别人的 2.5 倍，一切都是一个时间问题。   
 1. [永远考虑机会成本](https://github.com/yananma/dongshouxue_sdxx/blob/master/pytorch/ch3/%E6%B0%B8%E8%BF%9C%E8%80%83%E8%99%91%E6%9C%BA%E4%BC%9A%E6%88%90%E6%9C%AC.md)，是褚时健做事如此成功又如此漂亮的核心原因    
 2. 犯错才是学习的核心，会触发主动阅读，主动阅读是最好的学习方法
-3. [集中兵力，避强击弱](https://github.com/yananma/dongshouxue_sdxx/blob/master/pytorch/ch3/%E6%96%87%E4%BB%B6/%E5%81%9A%E4%BA%8B%E6%96%B9%E6%B3%95%E8%AF%A6%E7%BB%86.md#%E9%9B%86%E4%B8%AD%E5%85%B5%E5%8A%9B%E9%81%BF%E5%BC%BA%E5%87%BB%E5%BC%B1)  
+3. [集中兵力，**避强击弱(先找最简单的，最容易的)**](https://github.com/yananma/dongshouxue_sdxx/blob/master/pytorch/ch3/%E6%96%87%E4%BB%B6/%E5%81%9A%E4%BA%8B%E6%96%B9%E6%B3%95%E8%AF%A6%E7%BB%86.md#%E9%9B%86%E4%B8%AD%E5%85%B5%E5%8A%9B%E9%81%BF%E5%BC%BA%E5%87%BB%E5%BC%B1)  
 [《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 
 做事应该一直有一个是主要的事项（读 Django 源码书），做的时候应该是先做成主要事项的一个点（读一章、一节、一页、一段、一行）；任务一天不能超过 3 项，一个主攻，两个佯攻，多了反而都不做了，集中力量，逐个击破    
 反“围剿”、《七武士》  
@@ -25,7 +25,8 @@
 把大的任务拆分成一小段一小段，完成一小步  
 5. 注意力机制。等同视之就是都不重要。
 6. 取消、合并、重排、简化  
-7. 
+7. 专注，专注才能效率高，做一件事的时候，不要做其他的事
+8. 
 
 
 ### 小 tricks
