--- a/pytorch/ch3/《军工记忆》.md
+++ b/pytorch/ch3/《军工记忆》.md
@@ -1,4 +1,10 @@
 
+但丁的《神曲》的结构是人类作品中最好的结构，每一集都是一部《神曲》。  
+
+艰难的经历必然是万古长青的，必然是最有生命力的，写好的东西，写长的东西，写深刻的东西，写需要付出艰苦努力才能理解得东西，必然是正确的。  
+
+学会了怎么领导团队做事，就是但丁的《神曲》的结构   
+
 广义上是思想的支撑，像史诗一样，震撼人心  
 
 狭义上，就是自己做事的模板，自己以后肯定是这样的过程，一模一样；还有方法的指导；工作以后集体学习  
@@ -196,6 +202,47 @@
 “不管怎么样，这是实实在在地是想为党做点事情，做点贡献，把我所学的知识使出来，我只要这一生工作上对得起了，我就满足了。”  
 
 “你们来给我们照相，记录下来，我们心情特别地高兴，没有忘了我们这帮人，几十年辛苦”  
+
+
+### 《“052”型导弹驱逐舰》  
+
+潘镜芙院士：“抗日战争爆发的时候呢，1938 年的春天，我们就撑着船到上海来了。那么进了黄浦江的时候，我看到的都是日本的军舰，还有外国的大船，我们自己的一条也没有。所以心里很感叹，怎么我们自己就没有很好的军舰呢。”  
+
+**自称半路出家的潘镜芙，后来成了舰船设计专家。**  
+
+它是一个很复杂很庞大的一个系统，因为在整个舰上，有十多个分系统，有几万台设备。  
+
+它涉及到国家工业的方方面面，机械工业、化工、轻工的所有的系统，包括纺织，陆地上有的东西，舰上都有。  
+
+那个时候电脑根本就没看见，还没想到这个东西。当时也没有所谓的 CAD，就是用计算机辅助设计画图，这些都没有的。  
+
+在那个年代，所有宏伟的规划，都不得不从早上的削铅笔开始。铅笔、圆规、丁字尺、曲线板、压条、计算器，就是这些在今天看起来很原始的工具，一点点地勾勒着 052 驱逐舰的身形。  
+
+“你想要搞一个配电板，全船有七八十个配电板，那你就要画七八十个。那么每一个配电板里面，比如说有十个保险丝，你就画十个保险丝，这样一笔一笔去画十个保险丝。”  
+
+“这两栋办公大楼到了晚上都是灯火通明的。”  
+
+“那时候还没有空调，夏天我们都是带袖套，带着一个袖套趴在桌子上画。汗要浸到图纸上去，但是还是要画。冬天、夏天，那不管怎么样都得画图。”  
+
+“我们这个任务是按月来计算的，到月底你一定要拿出来，这没有人逼你，完全是一种责任心，自觉性，来做这个工作。”
+
+“军工产品，尤其是像这样一种，消耗国家这么多财富，这么多人劳动，假设做得不好，那责任太重大了。不是自己一点错了就算了，是对比起国家，对比起人民。”  
+
+寒来暑往，图纸上的岁月不仅枯燥琐碎，而且战战兢兢，容不得半点差错。在五年时间里，总体设计人员手绘出的图纸，总重量超过了一吨。如果没有信念的支撑和责任心的驱使，我们无法想象，他们如何度过了漫长的五年光阴，一千八百多个日日夜夜。  
+
+没想到经过测试，竟然发现了三百多个问题。  
+
+当时的设备，元器件水平都比较低，可靠性比较差。  
+
+在三百多个问题中，最让潘镜芙揪心的是电磁干扰，052 型驱逐舰上有大量的电子设备，它们之间会产生复杂的相互干扰。  
+
+“有电子战的，有短波的，有微波的，还有雷达的，雷达，缩波雷达，一个一个来开，一开了以后，各个设备来看到底有没有干扰，然后再换另一个设备再看。”  
+
+舰艇上的各类天线功率很高，产生的电磁波对人体有一定的伤害，科研人员并非不懂这个常识，但任务必须完成，没有人抱怨。   
+
+“当时比较危险的，我们几个人都躲在那个天线底下，超过一定的角度，超过一定地方，我们就躲开，一干干几次不行了，头昏了，马上就再换人，但工作还要进行。”  
+
+“终于看到自己亲手画的图纸，各种各样的计算都成现实了，成了一艘舰了，无上光荣，感到很高兴，非常高兴。”  
 
 
 
