--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -13,7 +13,7 @@
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
 7. 记图形比记逻辑更容易；记在书上的位置，ORM API；
 8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
-9. 复习。听歌的启发；吃饭看 Linux，睡醒睡前看算法；  
+9. 复习。听歌的启发；吃饭看 Linux；  
 10. 
 
 
@@ -23,8 +23,8 @@
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
-5. 
-6. 看视频，1 分钟一个任务，作为启动项  
+5. 看视频，1 分钟一个任务，作为启动项  
+6. 多面试，没有任何损失，却每次都能学到新的知识，无本万利，多多益善  
 7. 
 
 
@@ -46,4 +46,4 @@
 3. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
 4. 
 
-
+# 每天睡醒睡前读算法题目，直到找到下一份工作为止  
