--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -14,7 +14,8 @@
 7. 记图形比记逻辑更容易；记在书上的位置，ORM API；
 8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
 9. 复习。听歌的启发；吃饭看 Linux；  
-10. 
+10. 只靠听也是可以背下来的  
+11. 
 
 
 
