--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -7,6 +7,13 @@
 
 一次整理，终生受用  
 
+### 潘建伟院士  
+物理学家，主要从事量子物理和量子信息研究  
+《科技导报》公众号  
+[潘建伟院士：给量子科学实验卫星取名“墨子”，是为展现我国科研自信](https://mp.weixin.qq.com/s/tzu22VY5wXrdfR49J-uGTg)  
+墨子是所有科学家里面最早提出原子概念雏形的人；惯性定律；光沿直线传播，小孔成像  
+
+
 ### 任继周院士  
 草地农业科学家  
 《知领》公众号  
