--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -9,6 +9,9 @@
 
 ### 潘建伟院士  
 物理学家，主要从事量子物理和量子信息研究  
+
+**兴趣是最重要的，如果你看了这个说，你也是会的，什么都懂，但是你就对它没兴趣，那最好也不要去做那个事情。**  
+
 《科技导报》公众号  
 [潘建伟院士：给量子科学实验卫星取名“墨子”，是为展现我国科研自信](https://mp.weixin.qq.com/s/tzu22VY5wXrdfR49J-uGTg)  
 墨子是所有科学家里面最早提出原子概念雏形的人；惯性定律；光沿直线传播，小孔成像  
