--- a/pytorch/ch3/清单.md
+++ b/pytorch/ch3/清单.md
@@ -1,4 +1,8 @@
 
+### 做自己喜欢的事情
+马斯克：“如果你做的是你喜欢的事情，即使在你不工作的时候，你的脑子里也在想着这些事。”  
+**兴趣是最重要的，如果你看了这个说，你也是会的，什么都懂，但是你就对它没兴趣，那最好也不要去做那个事情。**——潘建伟院士    
+
 #### 永不放弃
 吴京如果放弃了就不可能拍《战狼》，就不会参演《流浪地球》  
 甄子丹放弃了就不会有《叶问》，反而成龙和李连杰现在过了辉煌时期，还是要持之以恒  
