--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -36,7 +36,8 @@
 5. 体检，不在体检上花钱，就要在治病上花几千几万倍的钱；不在体检上花时间，就要在治病上花时间；不在体检中承受一点，试试治病有多痛苦  
 6. 每天看做事方法，不要光看到方法要每天看，而是要看到每天因为看方法，做事的时候可以节省多少时间
 7. 花时间在不重要的题目上，重要的题目就记不住，或者是没时间学  
-8. 
+8. 花时间学方法，事半功倍；看院士视频  
+9. 
 
 
 
