--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,5 +1,6 @@
 
-# 集中所有的力量，先把项目完成
+# 后面以看视频为主，一天一门课：JavaScript、jQuery、restful、Vue、Bootstrap、Redis、项目、
+集中所有的力量，先把项目完成
 
 ## 通用学习方法
 1. 主动阅读是最好的学习方法，经常想一些问题，带着问题读。
