--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -7,6 +7,19 @@
 
 一次整理，终生受用  
 
+### 侯祥麟院士  
+石油化工专家  
+《知领》公众号  
+已经 86 岁高龄的侯祥麟，除了有其他活动外，每天上午依然准时来到办公室。  
+
+闵恩泽院士：“让我感动最深的是侯祥麟院士对我们的工作是充分信任的，是放手让我们自己去发挥自己的聪明才智，在把一些目标，原则确定之后，就放手让我们去干。”  
+
+侯祥麟院士提出说，8 小时的工作是不能成为科学家的。  
+
+侯祥麟院士：“科研工作应该是有两类，一类是认识世界，一类是改造世界，认识世界就是探讨客观规律，干这个事，发现这个规律以后啊，他是非常之愉快的，非常之高兴的，发现一个前人未知的一个规律，所以这种科学家是孜孜以求，花了好大力气，最后一朝探讨到了，这就很高兴了。你说他为什么要搞，真正要搞这个，就是要真正是喜好这个工作，然后从工作的成果中得到报酬，不是物质报酬，而是精神上的欣慰。”  
+
+
+
 ### 潘建伟院士  
 物理学家，主要从事量子物理和量子信息研究  
 
