--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -11,7 +11,7 @@
 先看一遍书自己回想着写写，想的时候按图形位置去想，然后再自己扩展发挥创造  
 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 整理《如何阅读一本书》
-5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session 
+5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session; jQuery 
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
 7. 记图形比记逻辑更容易；记在书上的位置，ORM API；
 8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
