--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,6 +1,6 @@
 
 王大珩院士：“有和没有大不一样。”  
-# 后面以看视频为主，一天一门课：JavaScript、jQuery、restful、Vue、Bootstrap、Redis、项目、
+# 后面以看视频为主，一天一门课：JavaScript、restful、Vue、Bootstrap、MongoDB、Redis、项目、
 集中所有的力量，先把项目完成
 
 ## 通用学习方法
