--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -13,7 +13,7 @@
 4. 整理《如何阅读一本书》
 5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session; jQuery 
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
-7. 记图形比记逻辑更容易；记在书上的位置，ORM API；
+7. 记图形比记逻辑更容易；记在书上的位置，ORM API；截图；  
 8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
 9. 复习。听歌的启发；吃饭看 Linux；**复习才是学习的关键**；背《过秦论》、学英语、听歌、兴趣起作用的核心原因、Linux、算法待证明。  
 10. 只靠听也是可以背下来的  
@@ -41,7 +41,8 @@
 ## 案例  
 1. 主动阅读，看一遍自己想着写一写，找到了学习编程的正确方法。学会了爬虫；学会了前后端；学会了算法，效率提高了 20 倍以上      
 2. 主动阅读，所以是先想一想，再看答案更好  
-3.  
+3. 截图和复习，叠加效应学会了算法，lollapalooza  
+4.  
 
 
 ## 长期原则  
