--- a/pytorch/ch3/文件/做事方法详细.md
+++ b/pytorch/ch3/文件/做事方法详细.md
@@ -11,7 +11,8 @@
 ### “小步快跑，试错迭代”
 不是不认真，而是先抓住主要矛盾  
 quick and dirty，then iterate.  
-急用先行，不求完美。  
+急用先行，不求完美。——任正非  
+Release early, release often.—— Guido van Rossum  
 马斯克、任正非、马化腾采用的战略  
 我的建议就是“小步快跑，快速迭代”。也许每一次产品的更新都不是完美的，但是如果坚持每天发现、修正一两个小问题，不到一年基本就把作品打磨出来了，自己也就很有产品的感觉了。所以，为了实现单点突破允许不完美，但要快速向完美逼近。  
 不应该花那么多时间学 Python、数学、Numpy、Pandas、Matplotlib、HTML、CSS、JavaScript，太过于细节了，很多东西都用不到。用到什么查什么。急用先行，不求完美。  
