--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -7,8 +7,7 @@
 1. 主动阅读是最好的学习方法，经常想一些问题，带着问题读。
 2. 大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系。把牛客网正确率降到 10%  
 3. 犯错才是学习的核心。犯错是最好，错了才知道要 search 什么，可以深化薄弱的部分，会触发主动阅读，主动阅读是最好的学习方法。由于人越渴，喝到水时，乐趣就越大。——但丁《神曲》
-4. 几分钟写一个小 demo，想一想自己想实现什么功能  
-先看一遍书自己回想着写写，想的时候按图形位置去想，然后再自己扩展发挥创造  
+4. 几分钟写一个小 demo，想一想自己想实现什么功能；通过编程 express 自己的想法  
 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 整理《如何阅读一本书》
 5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session; jQuery 
@@ -51,4 +50,4 @@
 3. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
 4. 
 
-# 躺着就读算法 3/365  06.25 完成  
+# 躺着就读算法 5/365  06.27 完成  
