--- a/pytorch/ch3/清单.md
+++ b/pytorch/ch3/清单.md
@@ -14,3 +14,23 @@
 我们国家的工业化发展过程  
 起点低才可以显示品质，是大展身手，大有可为的时机  
 
+#### useful  
+It has to be useful to the world，otherwise it won&apos;t exists.
+If we are useful to them, they will come
+公司如此，产品如此，工作也是如此
+不是用了多么先进的技术，而是解决了什么问题。
+自己写作犯的方向性错误
+工作看是不是 useful，而不是年龄、学校、专业
+技术最终是为产品服务。重要的是产品是不是 useful，而不是技术，这是人最常犯的错误。乔布斯说技术和市场、王坚院士说城市大脑最大的教训、李沐。不是读了什么书，而是读的书对别人对自己有什么帮助。
+华为、阿里、腾讯、百度、字节跳动、美团、滴滴、沃尔玛
+微信、支付宝、微信读书、
+牛客网、下厨房、BOSS直聘、高德地图、有道词典、
+CSDN、
+菜店、馒头店、超市、
+读过的书、bilibili 上看的课程、买的课程、
+人民日报、央视新闻、
+
+
+#### 要有计划，要有时间表，时间要紧张一些  
+To achieve great things，you need a plan and not quite enough time.
+
