--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -12,7 +12,7 @@
 4. 整理《如何阅读一本书》
 5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session; jQuery 
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
-7. 记图形比记逻辑更容易；记在书上的位置，ORM API；截图；  
+7. 记图形比记逻辑更容易；记在书上的位置，ORM API；截图；班级同学；宫殿记忆；杨利伟买摄像机记录内部开关位置  
 8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
 9. 复习。听歌的启发；吃饭看 Linux；**复习才是学习的关键**；背《过秦论》、学英语、听歌、兴趣起作用的核心原因、Linux、算法待证明。  
 10. 只靠听也是可以背下来的  
