--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -13,7 +13,7 @@
 5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session; jQuery 
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
 7. 记图形比记逻辑更容易；记在书上的位置，ORM API；截图；班级同学；宫殿记忆；杨利伟买摄像机记录内部开关位置  
-8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍    
+8. 滑雪模型，先熟练掌握每一个动作，再连贯起来，一气呵成；每道题写 10 遍；勤奋是根基，没有这 10 遍还是不行    
 9. 复习。听歌的启发；吃饭看 Linux；**复习才是学习的关键**；背《过秦论》、学英语、听歌、兴趣起作用的核心原因、Linux、算法待证明。  
 10. 只靠听也是可以背下来的  
 11. **70% 的课程都通过视频学习**，比如所有的前端技术，数据库技术，爬虫等等，一节课简单写一两行笔记，遇到不懂的再查，再补充笔记
@@ -50,4 +50,4 @@
 3. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
 4. 
 
-# 躺着就读算法 5/365  06.27 完成  
+# 躺着就读算法 6/365  06.28 完成  
