--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -22,7 +22,7 @@
 
 
 ## 编程学习方法
-1. 算法学习方法：自己想着写一遍，看看对不对
+1. 算法学习方法：核心是勤奋和持续的复习，上厕所读算法；
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
@@ -50,4 +50,4 @@
 3. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
 4. 
 
-# 躺着就读算法 6/365  06.28 完成  
+# 上厕所读算法 7/365  06.29 完成  
