--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -28,7 +28,8 @@
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
 5. 看视频，1 分钟一个任务，作为启动项  
 6. 多面试，没有任何损失，却每次都能学到新的知识，无本万利，多多益善  
-7. 
+7. 路上听书只听 Django 书，一章一章，一章听一周  
+8. 
 
 
 ### 小 tricks
