--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -11,6 +11,13 @@
 
 写一辈子，每个月总结，每个月报告  
 
+### 2021.06  
+1. 读完《红星照耀中国》
+2. 看完 jQuery 课程  
+3. 学完小饭桌项目  
+4. 读书 2600 小时  
+
+
 ### 2021.05  
 1. 读书时长超过 2500 小时
 2. 听完《数据结构》第三遍  
