--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -236,6 +236,24 @@
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
 
 
+### 彭桓武院士  
+物理学家  
+
+搞原子弹是为了促进和平。  
+
+最原始的动力就是每个人都要活着，都想要活的好一点，这个不能叫自私，这个是根本的一个动力，是原始动力。这个动力不过只有那么大，不是太大。等到国家荣辱摆在你身上了，那个动力就大得多了。  
+
+那个悲观有什么用呢？乐观总还有点用处吧。  
+
+你比如说社会新闻我很少看，讲些个什么没道理的事，这个那个的，坏事儿看起来使人生气，该杀该打的那些人，那看着有什么意思，我又不会向他学习。  
+
+问：这一百万对您来说？  
+答：对我来说没用，我生活足够了，加这一百万不加这一百万，这一百万等于白搭。因为你一个人只能用那么多钱。你像我现在吃，大夫给我限制，我只许吃这么多东西，一天只许吃一个鸡蛋，吃两个鸡蛋都不行，那个钱有什么用。  
+
+问：您为国家做了这么多，您留给自己的是什么呢？  
+答：留给自己的就是乐趣啊，做事儿的乐趣啊。  
+
+
 ### 程开甲院士  
 物理学家  
 
