--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -236,9 +236,23 @@
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
 
 
+
+### 郭永怀  
+力学家、应用数学家，我国近代力学事业的奠基人之一。  
+《科技人生》  
+
+李佩：他跟林家翘跟钱伟长，他们三个人都是学物理的，为什么同时都改成了去考取航空工程专业，就是因为觉得，我们国家的军事力量太弱。  
+
+李佩：大家总是觉得到国外去读书，然后就应该回国来，为国家能够做点儿什么事儿，使得我们国家的实力加强一些。因为我们在读书的时代，日本的飞机来轰炸，我们毫无一点力量去抵抗。所以大家都是由这种心愿。  
+
+在美国富足而轻松。在美国的时候，他最大的爱好就是听古典音乐，他收集的唱片，在后来回国时，装了半个吉普车。  
+
+后来从事“两弹一星”工作，每天都非常忙，再也没有时间听音乐了。  
+
+
 ### 彭桓武院士  
 物理学家  
-
+《大家》  
 搞原子弹是为了促进和平。  
 
 最原始的动力就是每个人都要活着，都想要活的好一点，这个不能叫自私，这个是根本的一个动力，是原始动力。这个动力不过只有那么大，不是太大。等到国家荣辱摆在你身上了，那个动力就大得多了。  
@@ -272,7 +286,7 @@
 
 
 ### 邓稼先  
-
+核物理学家   
 “那是 1958 年的 8 月份，那天晚上他回来比较晚，他说他要调动工作了，我问他调哪儿去，他说不能说，做什么工作，也不能说，我说你给我一个信箱地址，我们通信，他说可能也不太行。他就突然非常严肃地说：做好了这件事情，我这一生就过得很有价值，就是为它死也值得。”  
 
 “不要让别人把我们落得太远。”  
