--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -237,6 +237,16 @@
 
 
 
+
+### 王淦昌院士  
+核物理学家  
+
+当时成就斐然，享誉世界。让他参加“两弹一星”工作，要隐姓埋名，他稍微沉思了片刻，就铿锵有力地说：“愿以身许国。”  
+
+“863 计划”发起人之一  
+
+
+
 ### 郭永怀  
 力学家、应用数学家，我国近代力学事业的奠基人之一。  
 《科技人生》  
