--- a/pytorch/ch3/清单.md
+++ b/pytorch/ch3/清单.md
@@ -10,8 +10,9 @@
 #### 起步高低不重要，持之以恒最重要  
 复利原则  
 英语小学没学过，现在成了优势。编程也是这样  
-新加坡最开始都住在贫民窟里  
+国民党起步早，现在又怎么样呢？  
 我们国家的工业化发展过程  
+新加坡最开始都住在贫民窟里  
 起点低才可以显示品质，是大展身手，大有可为的时机  
 
 #### useful  
