--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -17,7 +17,8 @@
 9. 复习。听歌的启发；吃饭看 Linux；**复习才是学习的关键**；背《过秦论》、学英语、听歌、兴趣起作用的核心原因、Linux、算法待证明。  
 10. 只靠听也是可以背下来的  
 11. **70% 的课程都通过视频学习**，比如所有的前端技术，数据库技术，爬虫等等，一节课简单写一两行笔记，遇到不懂的再查，再补充笔记
-12. 
+12. 视频不要从头到尾每一集都看才是看，找自己需要的看。课程只看项目，速度提高 5 倍；一节课鼠标点击，看开头中间结尾；速度再提高 10 倍  
+13. 
 
 
 
