--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -7,6 +7,21 @@
 
 一次整理，终生受用  
 
+
+### 陈清泉院士  
+电机，电力驱动、电动汽车和智慧能源系统专家。
+
+一旦说起他所钟爱的电动汽车事业，他就能滔滔不绝地讲上几个小时。  
+
+“中国有望成为电动汽车王国，因为中国对电动汽车的需求，比任何一个国家都要强烈。一中国是缺油的国家，今天中国的进口油已经到了 58%（国家安全），二中国的经济发展很快，造成了我们的空气质量下降，在有些城市雾霾严重，所以环保的压力比任何国家都要迫切。第三中国的汽车还在发展，中国现在汽车的保有量还在增加，因为中国的经济还在发展。加入汽车不改造，中国能源安全的威胁，跟环保的威胁越来越严重，所以中国必须要做新能源汽车。一句话，中国由于需求的关系，电动汽车将会健康发展。大家能够齐心协力，要政府、企业和市场协同。”  
+
+“搞科研，首先你为什么要搞科研，搞科研首先要把你自己的火种点燃，搞科研靠什么呢？靠你的追求。”  
+
+“科研是个乐趣，追求未来，为人类造福。”  
+
+“我们生活在一个历史上难得的时代，要分秒必争。”  
+
+
 ### 侯祥麟院士  
 石油化工专家  
 《知领》公众号  
@@ -153,6 +168,7 @@
 
 “把自己的一生跟国家建设和人民需要结合起来，这是我最大的幸福。”——闵恩泽（2008年1月9日《光明日报》）  
 
+
 ### 金怡濂院士  
 《知领》公众号  
 “20世纪80年代，国内急需高性能计算机，不得不花巨资从国外进口一台大型计算机。没想到，在进口机器的同时，还捎带进来两个监工。双方签订的协议上明确规定，开机、关机必须由外方监工负责操作，我方不得接触机仓内的核心部件……”金怡濂说，这件事让他感到一种切肤之痛，让他彻底明白了一个道理：真正的高科技，买不来。中国一定要加速发展巨型机，否则将永远受制于人！  
@@ -236,8 +252,6 @@
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
 
 
-
-
 ### 王淦昌院士  
 核物理学家  
 
@@ -293,8 +307,6 @@
 “我觉得人生的价值在于贡献，你为人民贡献，为国家贡献，这个才是价值。”  
 
 
-
-
 ### 邓稼先  
 核物理学家   
 “那是 1958 年的 8 月份，那天晚上他回来比较晚，他说他要调动工作了，我问他调哪儿去，他说不能说，做什么工作，也不能说，我说你给我一个信箱地址，我们通信，他说可能也不太行。他就突然非常严肃地说：做好了这件事情，我这一生就过得很有价值，就是为它死也值得。”  
@@ -346,7 +358,6 @@
 姑姑拿这件衣服就在灯底下照了一下，衣服在心口的位置已经透亮了，要破了。于是问父亲为什么会破在这个地方？  
 
 父亲很平静地说，心口痛，揉得久了就破了。”  
-
 
 
 ### 王大珩院士  
