--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -12,7 +12,8 @@
 4. 学完一门 Bootstrap 课程  
 5. 学完一门 Vue 课程  
 6. 学完 Django REST framework 源码课程。读了源码，非常清楚，一次弄懂，终生使用  
-7. 
+7. 学完菜鸟教程 C 语言教程  
+8. 
 
 
 
