--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -13,7 +13,8 @@
 5. 学完一门 Vue 课程  
 6. 学完 Django REST framework 源码课程。读了源码，非常清楚，一次弄懂，终生使用  
 7. 学完菜鸟教程 C 语言教程  
-8. 
+8. 看了一些 Python 实现的底层源码，发现可以看懂很大一部分了。这个具有标志性意义，第一点是，发现 Python 的很多功能原来就是这样实现的，一点都不神秘；第二点是几个月前还在学 Python 基础，现在已经在看底层实现了；第三，想起之前还从来没想过这辈子会和编程有关系，现在已经可以看 Python 源码了，怎么能不感慨呢。
+9. 
 
 
 
