--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -7,6 +7,11 @@
 
 一次整理，终生受用  
 
+### 毛二可院士  
+雷达、信息处理技术专家。  
+
+“我之所以能在专业上干出一些成绩，主要在于我一直心无旁骛，从没有停止过自己的科研工作。在一个越来越追求效率的时代，时间浪费不起！如果你已选择了一项事业，就应该持之以恒地做下去。”  
+
 
 ### 陈清泉院士  
 电机，电力驱动、电动汽车和智慧能源系统专家。
