--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -21,7 +21,6 @@
 13. 
 
 
-
 ## 编程学习方法
 1. 算法学习方法：核心是勤奋和持续的复习，上厕所读算法；
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
@@ -30,7 +29,8 @@
 5. 看视频，1 分钟一个任务，作为启动项  
 6. 多面试，没有任何损失，却每次都能学到新的知识，无本万利，多多益善  
 7. 路上听书只听 Django 书，一章一章，一章听一周  
-8. 
+8. 后端开发不会没有任何难度，如果感觉，只是一个点或者连续两三个点不会，不会就自己敲个三五遍，还是不会就和别人讨论一下，然后再敲三五遍，肯定就会了。  
+9. 
 
 
 ### 小 tricks
