--- a/pytorch/ch3/《军工记忆》.md
+++ b/pytorch/ch3/《军工记忆》.md
@@ -247,3 +247,49 @@
 
 
 
+
+
+
+
+
+
+
+
+### 《面对面：亲历者回忆中国核武器的峥嵘岁月》  
+
+我们那个时候工作不分昼夜，所有人每天晚上都到办公室去。  
+
+我到现在都认为，我很自豪的一件事情，就是我参加了这样一个任务，我不讲有什么贡献，我也没多大贡献，但是我参加了。我觉得这件事情，值得我一辈子自豪。——李德元  
+
+我们现在讲创新，创新要打好基础，打好科学基础，这是最重要的。（读源码是重要的）  
+
+胡思得院士：“当时我们的党支部书记，有一个任务，晚上十点钟的时候，一定到办公室来看看，把浮肿的同志一定赶回去，到十二点钟的时候，一定把大家所有的人都赶出来。但是很多，包括浮肿的同志，到外面转一转，书记一走又回来了。这都是自觉自愿的，没有人要强迫你要这么干。”  
+
+有周末吗？有节假日吗？  
+基本上是没有。
+你觉得这样苦不苦，单调不单调，枯燥不枯燥？  
+很单调很单调，但是心里面怀着一个宏大的目标。非常单调，很多记者很多作家，要想写我们的故事来找我，我就说你们不要写，这里面没有故事性，没有什么这个，什么爱情啊什么都没有，是很枯燥的事情。  
+
+胡思得院士：“尽管这个九次计算非常繁琐，但是，我们这帮人，最后都成了这个工作里面的骨干。”（读源码的重要性，反复磨砺，厚积薄发）  
+
+胡思得院士：“我有一次，吃完饭跟黄祖洽在一起散步，我当时跟黄祖洽说，我说参加白天九次计算的讨论会，我说这个专家可真不得了，每个人都能讲出一套一套的，都挺厉害。我这么一个评价。黄祖洽跟我讲了一段，这是我终生难忘的一句话，他说小胡啊，你可不能只看热闹啊，你应该从每一个人的发言里头，去细细体会，他们每个人的思维的特点，他们的一些科研方法，你把它想通了，而且你能学到手，你将来就能成为了不起的科学家。就这段话，给我印象非常深。”  
+为什么呢？
+胡思得院士：“为什么，就实际上就是这样，我们好多很聪明的同志，由于思维方法不对，科学研究方法不对，走到死胡同里去了。他给我举了个例子，彭先生是不是善于抓主要矛盾，程开甲周光召，方法都不一样，但思想都一样，先抓主要矛盾。他说你把这些人的本事，都能学到了，那你就是一个了不起的科学家。当然我没这么大本事把所有的都学到，但是我时刻都注意这个问题。”  
+
+您现在也已经是一位长者了，您再想想您年轻的时候，跟那些大家学习，跟他们一起工作，有什么是受用一辈子的。  
+李德元：“就是科学精神。”  
+科学精神到底是什么？
+李德元：“实事求是，是一是一，是二是二，是正确就是正确，是错误就是错误。”  
+“当然我在见他们以前，我有很多科学知识，但是我来了以后，那些知识都是上层的东西，真正的基础是科学态度。一个人啊，真正受用一辈子的东西，是科学态度。”  
+
+李维新：当时我们九所有好的就是，大家互教互学，老邓啊，老于啊，周光召他们亲自给我们开课，我们自己也互相开课。  
+
+李维新：我就觉得你的荣誉再大，也没有国家把你的这份荣誉，融到国家的需要，融到国家的利益里头去，这更重要。我为国家为这个重要事业，已经有了自己的贡献，觉得已经很不错了，我这一辈子已经值得了。  
+
+李德元：“我觉得我很幸运，国家把我分配到这样一个单位。”  
+您回望自己这一辈子，您的价值在哪里？  
+李德元：“我的价值就是，我参加了中国的核武器研制，这是我一辈子的价值，我很自豪。因为我有这样一个机会，参加这么伟大的事业。我大言不惭地说，我对国家是有贡献的，这我很满足。这一辈子过的可以。”  
+
+
+
+
